Окна готовы. Добавила исключения с файлами.